--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,8 @@
-name: kt_xt
+name: kotlin_extensions
 version: 0.0.1
-description: A library of extension methods inspired by Kotlin.
+description: A library of extension method implementations inspired by Kotlin.
+
+# TODO: Update these
 homepage: https://github.com/danchurch-wk/KotlinExtensionsForDart
 repository: https://github.com/danchurch-wk/KotlinExtensionsForDart
 
